Name:                octohat
Version:             0.1
Synopsis:            A tested, minimal wrapper around GitHub's API. Very incomplete at the moment
License:             AllRightsReserved
Author:              StackBuilders
Maintainer:          jsantos@stackbuilders.com
Stability:           Experimental
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.10

Library
  hs-source-dirs: src

  Build-depends:
    aeson,
    base,
    base-compat,
    base64-bytestring,
    base16-bytestring,
    bytestring,
    cryptohash,
    either,
    MonadCatchIO-transformers,
    mtl,
    text,
    time,
    xmlhtml,
    wreq,
    errors,
    http-types,
    http-client,
    unordered-containers,
    lens

  ghc-options:       -Wall
  exposed-modules:   Network.Octohat.Types
                   , Network.Octohat.Members
                   , Network.Octohat.Keys
                   , Network.Octohat

  other-modules:     Network.Octohat.Internal

  default-language: Haskell2010

test-suite spec
  ghc-options     :   -Wall
  type            :   exitcode-stdio-1.0
  hs-source-dirs  :   spec
  main-is         :   Spec.hs
  build-depends   :   base >= 4.7 && <4.8
                    , hspec
                    , hspec-expectations
                    , text
                    , octohat
  other-modules:    Network.Octohat.TestData,
                    Network.Octohat.TestUtil
  default-language:   Haskell2010
