Name:                octohat
Version:             0.1
Synopsis:            A tested, minimal wrapper around GitHub's API. Very incomplete at the moment
License:             AllRightsReserved
Author:              StackBuilders
Maintainer:          jsantos@stackbuilders.com
Stability:           Experimental
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.10

Library
  hs-source-dirs: src

  Build-depends:
      aeson                == 0.8.*
    , base                 >= 4.5 && < 4.8
    , base-compat          == 0.5.*
    , base64-bytestring    == 1.0.*
    , base16-bytestring    == 0.1.1.*
    , bytestring           >= 0.9
    , cryptohash           == 0.11.*
    , either               == 4.3.*
    , mtl                  == 2.*
    , text                 == 1.2.*
    , time                 == 1.4.*
    , xmlhtml              == 0.2.*
    , wreq                 == 0.3.*
    , errors               == 1.4.*
    , http-types           == 0.8.*
    , http-client          == 0.4.*
    , unordered-containers == 0.2.*
    , lens                 >= 4.0 && <= 4.7

  ghc-options:       -Wall
  exposed-modules:   Network.Octohat.Types
                   , Network.Octohat.Members
                   , Network.Octohat.Keys
                   , Network.Octohat

  other-modules:     Network.Octohat.Internal

  default-language: Haskell2010

test-suite spec
  ghc-options     :   -Wall
  type            :   exitcode-stdio-1.0
  hs-source-dirs  :   spec
  main-is         :   Spec.hs
  build-depends   :   base               >= 4.5 && <4.8
                    , hspec              == 2.1.*
                    , hspec-expectations == 0.6.*
                    , text               == 1.2.*
                    , octohat
  other-modules:    Network.Octohat.TestData,
                    Network.Octohat.TestUtil
  default-language:   Haskell2010
